--- a/package.json
+++ b/package.json
@@ -1,37 +1,57 @@
 {
-  "name": "auto-immutable-docs",
-  "version": "1.0.0",
-  "private": true,
-  "description": "auto-immutable-docs",
-  "author": "Stephen Isienyi",
-  "keywords": [
-    "gatsby"
-  ],
-  "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+  "author": {
+    "email": "stephen.isienyi@webkrafting.com",
+    "name": "Stephen Isienyi"
   },
   "dependencies": {
+    "antd": "^4.24.15",
     "gatsby": "^5.13.3",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-offline": "^6.13.2",
     "gatsby-plugin-sass": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-sitemap": "^6.13.1",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.2.0",
-    "sass": "^1.75.0"
+    "sass": "^1.74.1"
   },
+  "description": "Auto Immutable JS docusaurus site.",
   "devDependencies": {
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "prettier": "2.2.1",
     "typescript": "^5.3.3"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "homepage": "https://webkrafters.github.io/auto-immutable/",
+  "keywords": [
+    "immutable",
+    "immutable.js",
+    "auto immutable"
+  ],
+  "license": "ISC",
+  "main": "index.js",
+  "name": "auto-immutable-docs",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/webKrafters/auto_immutable"
+  },
+  "scripts": {
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "typecheck": "tsc --noEmit"
+  },
+  "version": "0.0.1"
 }
