--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "alias": "auto-immutable.js",
   "author": {
     "email": "stephen.isienyi@webkrafting.com",
     "name": "Stephen Isienyi"
@@ -31,7 +32,7 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "homepage": "https://webkrafters.github.io/auto-immutable/",
+  "homepage": "https://auto-immutable.js.org",
   "keywords": [
     "immutable",
     "immutable.js",
@@ -51,10 +52,10 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/webKrafters/auto-immutable"
+    "url": "https://github.com/webKrafters/auto-immutable.js"
   },
   "scripts": {
-    "build": "gatsby clean && gatsby build && node ./merge-docs-with-main.js",
+    "build": "gatsby build",
     "clean": "gatsby clean",
     "develop": "gatsby develop",
     "env": "gatsby info",
