adding credentials to deploy action - wip

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,13 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-          
+
       - run: npm ci
       - run: npm install
       - run: npm run deploy
+
+      - run: |
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/webkrafters/auto-immutable.git
+          npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
