--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,8 @@ jobs:
       - run: npm run deploy
 
       - run: |
+          git config email
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/webkrafters/auto-immutable.git
-          npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
+          npm run deploy --u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
