--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,9 @@ jobs:
       - run: npm run deploy
 
       - run: |
-          git config email
+          git config user.name "steveswork"
+          git config user.email "stephen.isienyi@webkrafting.com"
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/webkrafters/auto-immutable.git
-          npm run deploy -u "github-actions-bot <support+actions@github.com>"
+          npm run deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
